[package]
name = "chfft"
version = "0.3.3"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
repository = "https://github.com/chalharu/chfft"
keywords = ["fft", "numerics", "dsp", "mathematics"]
license = "MPL-2.0"
readme = "README.md"
description = "Fastest Fourier Transform library implemented with pure Rust."
documentation = "https://docs.rs/chfft/"
edition = "2018"

[lib]
name = "chfft"
bench = false
test = true

[dependencies]
num-traits = { version = "0.2.8", default-features = false, features = ["libm"] }
num-complex = { version = "0.2.3", default-features = false }

[dev-dependencies]
rand = ">=0.7.0"
rand_xorshift = ">=0.2.0"

[dev-dependencies.appro-eq]
version=">=0.0.0"
features=["complex"]

[features]
default = ["std"]
docs = []
std = ["num-traits/std", "num-complex/std"]

[patch.crates-io]
num-traits = { git = "https://github.com/rust-num/num-traits.git" }
