[package]
name = "chfft"
version = "0.3.4"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
repository = "https://github.com/chalharu/chfft"
keywords = ["fft", "numerics", "dsp", "mathematics"]
license = "MPL-2.0"
readme = "README.md"
description = "Fastest Fourier Transform library implemented with pure Rust."
documentation = "https://docs.rs/chfft/"
edition = "2018"

[lib]
name = "chfft"
bench = false
test = true

[dependencies]
num-traits = "0.2.19"
num-complex = "0.4.6"

[dev-dependencies]
rand = "0.9.1"
rand_xorshift = "0.3.0"

[dev-dependencies.appro-eq]
version="0.3.1"
features=["complex"]

[features]
docs = []

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]